Input: fix style error -  border-spacing should not depend on default value  (#11990) (#12016)

--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -224,6 +224,7 @@
   display: inline-table;
   width: 100%;
   border-collapse: separate;
+  border-spacing:0;
 
   > .el-input__inner {
     vertical-align: middle;
